--- a/EcommerceProject/appsettings.json
+++ b/EcommerceProject/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DevDB": "Server=DESKTOP-TSAAMRK\\SQLEXPRESS;Database=ShopManagement;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "MySuperSecretKeyThatIsVerySecure123456!",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience"
   }
+
+
 }
