--- a/EcommerceProject/appsettings.json
+++ b/EcommerceProject/appsettings.json
@@ -13,7 +13,17 @@
     "Key": "MySuperSecretKeyThatIsVerySecure123456!",
     "Issuer": "YourIssuer",
     "Audience": "YourAudience"
-  }
+  }//,
+  //{
+  //  "EmailSettings": {
+  //    "SmtpServer": "smtp.gmail.com",
+  //    "SmtpPort": 587,
+  //    "SmtpUsername": "your-email@gmail.com",
+  //    "SmtpPassword": "your-app-password",
+  //    "FromEmail": "your-email@gmail.com",
+  //    "FromName": "E Store"
+  //  }
+  //}
 
 
 }
