--- a/EcommerceProject/appsettings.json
+++ b/EcommerceProject/appsettings.json
@@ -1,3 +1,25 @@
+//{
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft.AspNetCore": "Warning"
+//    }
+//  },
+//  "AllowedHosts": "*",
+//  "ConnectionStrings": {
+//    "DevDB": "Server=DESKTOP-TSAAMRK\\SQLEXPRESS;Database=ShopManagement;Trusted_Connection=True;TrustServerCertificate=True;"
+//  },
+
+//  "Jwt": {
+//    "Key": "MySuperSecretKeyThatIsVerySecure123456!",
+//    "Issuer": "YourIssuer",
+//    "Audience": "YourAudience"
+//  }
+ 
+
+
+//}
+
 {
   "Logging": {
     "LogLevel": {
@@ -6,26 +28,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DevDB": "Server=DESKTOP-TSAAMRK\\SQLEXPRESS;Database=ShopManagement;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
   "Jwt": {
     "Key": "MySuperSecretKeyThatIsVerySecure123456!",
     "Issuer": "YourIssuer",
     "Audience": "YourAudience"
   }
-  
-  //,
-  //{
-  //  "EmailSettings": {
-  //    "SmtpServer": "smtp.gmail.com",
-  //    "SmtpPort": 587,
-  //    "SmtpUsername": "your-email@gmail.com",
-  //    "SmtpPassword": "your-app-password",
-  //    "FromEmail": "your-email@gmail.com",
-  //    "FromName": "E Store"
-  //  }
-  //}
-
-
 }
