--- a/EcommerceProject/appsettings.Mac.json
+++ b/EcommerceProject/appsettings.Mac.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DevDB": "Host=localhost;Port=5432;Database=ShopManagement;Username=postgres;Password=yourpassword"
+    "DevDB": "Host=localhost;Port=5432;Database=ShopManagement;Username=postgres;Password=test123;"
   }
 }
