--- a/EcommerceProject/EcommerceProject.csproj
+++ b/EcommerceProject/EcommerceProject.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\products\" />
+  </ItemGroup>
+
 </Project>
