`Get Products PP`

--- a/EcommerceProject/appsettings.json
+++ b/EcommerceProject/appsettings.json
@@ -28,9 +28,27 @@
     }
   },
   "AllowedHosts": "*",
+
   "Jwt": {
     "Key": "MySuperSecretKeyThatIsVerySecure123456!",
     "Issuer": "YourIssuer",
     "Audience": "YourAudience"
+  },
+
+  "AllowedOrigins": [
+    "http://localhost:4200",
+    "http://192.168.70.94:4200"
+  ],
+
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5000"
+      },
+      "Https": {
+        "Url": "https://0.0.0.0:7058"
+      }
+    }
   }
 }
+
