--- a/EcommerceProject/appsettings.Windows.json
+++ b/EcommerceProject/appsettings.Windows.json
@@ -1,5 +1,13 @@
 ﻿{
   "ConnectionStrings": {
     "DevDB": "Server=DESKTOP-TSAAMRK\\SQLEXPRESS;Database=ShopManagement;Trusted_Connection=True;TrustServerCertificate=True;"
-  }
+  },
+
+
+
+  //"ConnectionStrings": {
+  //  "DevDB": "workstation id=ShopManagement.mssql.somee.com;packet size=4096;user id=khizarkk7_SQLLogin_1;pwd=w5p92acz4l;data source=ShopManagement.mssql.somee.com;persist security info=False;initial catalog=ShopManagement;TrustServerCertificate=True"
+  //}
 }
+
+
