--- a/EcommerceProject/appsettings.json
+++ b/EcommerceProject/appsettings.json
@@ -1,24 +1,3 @@
-//{
-//  "Logging": {
-//    "LogLevel": {
-//      "Default": "Information",
-//      "Microsoft.AspNetCore": "Warning"
-//    }
-//  },
-//  "AllowedHosts": "*",
-//  "ConnectionStrings": {
-//    "DevDB": "Server=DESKTOP-TSAAMRK\\SQLEXPRESS;Database=ShopManagement;Trusted_Connection=True;TrustServerCertificate=True;"
-//  },
-
-//  "Jwt": {
-//    "Key": "MySuperSecretKeyThatIsVerySecure123456!",
-//    "Issuer": "YourIssuer",
-//    "Audience": "YourAudience"
-//  }
- 
-
-
-//}
 
 {
   "Logging": {
@@ -44,8 +23,9 @@
     "Endpoints": {
       "Http": {
         "Url": "http://0.0.0.0:5000"
-      },
-      "Https": {
+      }
+
+      ,"Https": {
         "Url": "https://0.0.0.0:7058"
       }
     }
